# lieutenant-dean

./: .ansible-lint  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .sourcery.yaml  .yamllint.yml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  Pipfile  README.md  app.py  captain-black.code-workspace  celery_app.py  example_chain.py  example_chord.py  example_custom.py  example_custom_multi_queues.py  example_group.py  example_multi.py  example_multi_playbook.py  example_pika_producer.py  example_rabbit.py  example_rabbit_custom_pika.py  example_redis_single.py  example_single.py  example_task_callback.py  example_task_in_task.py  flask_app.py  flask_app_apidocs.py  holder.py  makefile  mkdocs.yml  pyproject.toml  requirements-no-versions.txt  requirements.dev.txt  requirements.txt  run.py  settings.json  (+12 more)
.devcontainer/: dev-playbook.yml  devcontainer.json  post-create.sh
.github/workflows/: build-and-publish.yml  delete-me.yml  python-tests.yml  run-all-tests.yml
ansible/: README.md
ansible/filter_plugins/: demonstration_filter.py
ansible/playbooks/: ansible.cfg
ansible/playbooks/create/: rabbitmq.yml
ansible/playbooks/deploy/: lima-focal-webserver.sh  lima-focal-webserver.yml  webservers.yml
ansible/playbooks/inspection/: system.yml
ansible/playbooks/update/: juniper-switch.yml
ansible/roles/demo_role_1/tests/: test.yml
ansible/roles/demo_role_2/tasks/: main.yml
ansible/roles/demo_role_2/vars/: main.yml
ansible_project_1/: README.md
ansible_project_1/filter_plugins/: demonstration_filter.py
ansible_project_1/playbooks/: ansible.cfg
ansible_project_1/playbooks/create/: lima-focal.yml  lima-webserver.yml  rabbitmq.yml
ansible_project_1/playbooks/inspection/: system.yml
ansible_project_1/playbooks/recover/: lima-webserver.yml
ansible_project_1/roles/demo_role_1/defaults/: main.yml
ansible_project_1/roles/demo_role_1/handlers/: main.yml
ansible_project_1/roles/demo_role_1/meta/: main.yml
ansible_project_1/roles/demo_role_1/tasks/: main.yml
ansible_project_1/roles/demo_role_1/tests/: test.yml
ansible_project_1/roles/demo_role_1/vars/: main.yml
api/: flask_app.py  flask_app_apidocs.py  text.py  text_apidocs.py
app/: tasks.py  test-harness.py
celery_app/: task_broker.py  task_logging.py
celery_app/tasks/: celery_text.py  custom_text.py
celery_apps/: pika_consumer.py  rabbit_broker.py  rabbit_consumer.py  redis_broker.py
celery_apps/rabbit_tasks/: text.py
celery_apps/redis_tasks/: numbers.py  numbers_test.py  text.py  text_test.py
celery_queue_rabbit/: celery_app.py  consumers.py
celery_queue_rabbit/tasks/: custom.py  number.py  text.py
celery_rabbit/: __init__.py  celery_app.py  consumers.py  queues.py  task_logging.py
celery_rabbit/tasks/: __init__.py  ansible.py  custom.py  number.py  text.py
celery_redis/: __init__.py  beat_config.py  flower_config.py  main.py  worker_high_conf.py  worker_low_conf.py
celery_redis/tasks/: numbers.py  text.py
click_cli/: main.py  shit.py
click_cli/commands/: __init__.py  cmd1.py  cmd2.py  numbers.py  text.py
control-panel/: package-lock.json  package.json
control-panel/src/: unleashProxy.js
data/: text.py  text_test.py
docs/: _config.yml  index.md  task_queue.md  task_queues.md  todo.md
docs/_layouts/: default.html
docs/dev/: adding-python-packages.md
fastapi_api_v2/: __main__.py
fastapi_app/: __main__.py
fastapi_app/routers/: customer.py
flask_api/blueprints/: greetings.py
flask_api_v1/: flask_app.py  gunicorn_conf.py  main.py  pyproject.toml  requirements.txt  text.py
flask_api_v1/apidocs/: text.py
flask_api_v1/blueprints/: greetings.py  text.py
flask_app/: __init__.py  gunicorn_conf.py  main.py  settings.py
flask_app/apidocs/: __init__.py  greetings.py  numbers.py  text.py
flask_app/blueprints/: greetings.py  numbers.py  text.py
flask_app/handlers/: __init__.py  numbers.py  text.py
flask_app/models/: __init__.py  number.py  text.py
info_module/: alembic.ini  numbers_test.py  text.py  text_test.py
info_module/data/migrations/: env.py
info_module/data/models/: application.py
info_module/db/data/: alice.json
info_module/models/: clothing.py  person.py  person_test.py
infrastructure/: Vagrantfile
monitoring/: prometheus.yml
my_module/: numbers.py  text.py  text_test.py
my_module/db/data/: bob.json  carol.json
my_module/models/: person.py  person_test.py
pkg_captain_black/: numbers.py  settings.py  text.py
pkg_config/: alembic.ini  numbers_test.py  pyproject.toml
pkg_shared/: __init__.py  settings.json  settings.py
pkg_shared/numbers/: __init__.py  add.py
pkg_shared/text/: __init__.py  reverse.py
prometheus/: prometheus.yml
prometheus_monitoring/: celery_alerts.yml  docker-compose.yml
pytest_unit/flask_api_v1/: text_test.py
pytest_unit/pkg_captain_black/: numbers_test.py  text_test.py
pytest_unit/pkg_config/: numbers_test.py  text_test.py
queue/: celery_app.py  text.py  text_test.py
rest_api/: flask_app.py  text.py  text_apidocs.py  text_test.py
scratch/: example_chain.py  example_chord.py  example_custom.py  example_custom_multi_queues.py  example_group.py  example_multi_playbook.py
scratch/celery/: __init__.py
scratch/settings/: __init__.py  flask_app_settings.py  pkg_shared_settings.py
strings/: reverse.py  reverse_apidocs.py
task_queue/: celery_app.py  numbers.py  numbers_test.py  playbook.py  task_logging.py  text.py  text_test.py
task_queues/: celery_app.py  numbers.py  numbers_test.py  rabbit_broker.py  rabbit_queue.py  redis_broker.py  task_logging.py  text.py  text_test.py
task_queues/rabbit_tasks/: playbook.py  text.py
task_queues/redis_tasks/: numbers.py  numbers_test.py  text.py  text_test.py
task_queuing/: celery_app.py  consumers.py  queues.py  task_logging.py
task_queuing/tasks/: ansible.py  custom.py  number.py  text.py
tests/unit/: mock_built_in_file.py
tests/unit/flask_app/: __init__.py  text_test.py
tests/unit/pkg_captain_black/: numbers_test.py  text_test.py
tests/unit/pkg_shared/: numbers_test.py  settings_test.py  text_test.py
(+14 files in other folders)
