[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "captain_black"
version = "1.0.0"
description = "Python test bed"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
        "ansible",
        "ansible-runner",
        "black",
        "celery",
        "click",
        "debugpy",  # only required for debugging, not needed for production.
        "fastapi",
        "flake8",
        "flasgger",
        "Flask",
        "flower",
        "gunicorn",
        "mkdocs",
        "mkdocs-mermaid2-plugin",
        "mkdocs-roamlinks-plugin",
        "mypy",
        "ncclient",
        "pip-tools",  # used to manage requirements.txt.
        "pytest",  # used for testing, not needed for production.
        "pytest-flask",  # used for testing, not needed for production.
        "python-dotenv",  # used for the .env secrets file.
        "redis",
        "requests",
        "UnleashClient"
]

[tool.setuptools]
py-modules = [
    'celery_rabbit',
    'celery_redis',
    'click_cli',
    'fastapi_app',
    'flask_app',
    'pkg_captain_black',
    'prometheus_monitoring',
    'pytest_unit'
]  #  Explicitly set up py-modules.

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
run = "click_cli.main:cli"
