[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "captain_black"
version = "1.0.0"
description = "Captain Black Python test bed"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta", 
    "Programming Language :: Python :: 3.11",
]
dependencies = [
        "ansible",
        "ansible-runner",
        "black",
        "celery",
        "click",
        "debugpy",  # only required for debugging, not needed for production.
        "fastapi",
        "flake8",
        "flasgger",
        "Flask",
        "flower",
        "gunicorn",  # used by the Flask API.
        "hypercorn",  # used by the FastApi API.
        "mkdocs",
        "mkdocs-mermaid2-plugin",
        "mkdocs-roamlinks-plugin",
        "mypy",
        "ncclient",
        "pip-tools",  # used to manage requirements.txt.
        "pytest",  # used for testing, not needed for production.
        "pytest-flask",  # used for testing, not needed for production.
        "python-dotenv",  # used for the .env secrets file.
        "redis",
        "requests",
        "UnleashClient"  # used by the for feature flags.
]

[tool.setuptools]
py-modules = [
    'celery_rabbit',
    'celery_redis',
    'click_cli',
    'fastapi_app',
    'flask_app',
    'pkg_captain_black',
    'prometheus_monitoring',
    'pytest_unit'
]  #  Explicitly set up py-modules.

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
run = "click_cli.main:cli"

[tool.isort]
profile = "black"

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = true
pythonVersion = "3.11"
pythonPlatform = "Linux"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
follow_imports = "skip"
"no_strict_optional" = true
"exclude" = [
    "typings",
]

[tool.pytest.ini_options]
log_cli = false
minversion = "6.0"
addopts = "-q --disable-warnings --cache-clear"
testpaths = ["./tests"]

[tool.ruff]
extend-include = ["*.py.j2"]
select = ["F", "E", "W", "C90", "I", "PL", "D"]
ignore = ["D203", "D213"]
fixable = ["ALL"]
line-length = 110
target-version = "py311"
exclude = [
    ".git",
    ".pytest_cache",
    ".venv",
    ".vscode",
    "__pycache__",
]
