[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "captain_black_flask_api_v1"
version = "1.0.0"
description = "Python Flask API"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
        "black",
        "debugpy",  # only required for debugging, not needed for production.
        "flake8",
        "flasgger",
        "Flask",
        "gunicorn",
        "mypy",
        "pip-tools",  # used to manage requirements.txt.
        "pytest",  # used for testing, not needed for production.
        "pytest-flask",  # used for testing, not needed for production.
        "python-dotenv",  # used for the .env secrets file.
        "redis",
        "requests",
        "UnleashClient"
]

[tool.setuptools]
py-modules = []  #  Disable auto discovery of modules (unwanted files or directories might be included now).
