[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "captain_black_pkg_config"
version = "1.0.0"
description = "Python Package"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
        "black",
        "debugpy",  # only required for debugging, not needed for production.
        "flake8",
        "mypy",
        "pip-tools",  # used to manage requirements.txt.
        "redis",
        "requests",
        "UnleashClient"
]

[tool.setuptools]
py-modules = []  #  Disable auto discovery of modules (unwanted files or directories might be included now).
